--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ nav{
     text-align: center;
     line-height: 90px;
     font-size: 20px;
+    outline: 2px solid black;
 }
 main{
     grid-area: m;
@@ -66,9 +67,11 @@ footer{
     width: 100%;
     background-color: grey;
     margin-bottom: 20px;
+    outline: 2px solid black;  
 }
 #progBaseY{
     width: 40%;
+    float: left;
 }
 #progBar{
     width: 1%;
@@ -92,6 +95,26 @@ footer{
     float: right;
     padding-top: 10px;
 }
+#ytelseOgPenger{
+    width: 100%;
+    height: 50px;
+}
+#paVeiTil{
+    float: left;
+    height: 30px;
+    font-size: 20px;
+    padding-left: 20px;
+}
+#countPenger{
+    float: right;
+    height: 30px;
+    font-size: 24px;
+    padding-top: 3px;
+    color: yellow;
+    font-weight: 1000;
+    background-color: grey;
+    outline: 2px solid black;
+}
 #klikker{
     width: 300px;
     height: 80px;
@@ -101,5 +124,20 @@ footer{
     height: 80px;
 }
 #velgNyDiv{
-    display: none;
+    display: inline;
+}
+#velgByer{
+    display: flex;
+    flex-wrap: wrap;
+}
+#velgByer > div{
+    background-color: #f1f1f1;
+    width: 130px;
+    height: 100px;
+    margin: 10px;
+    padding-top: 20px;
+    text-align: center;
+    line-height: 30px;
+    font-size: 20px;
+    outline: 2px solid black;
 }
